# JNI

./: .gitignore  README.md  pom.xml
src/main/cpp/: CMakeLists.txt  com_matthijs_kropholler_jniarticle_MyNativeObject.cpp  com_matthijs_kropholler_jniarticle_MyNativeObject.h
src/main/java/com/matthijs/kropholler/jniarticle/: JniArticleApplication.java  MyDataObject.java  MyNativeObject.java
src/test/java/com/matthijs/kropholler/jniarticle/: JniArticleApplicationTests.java
